# PatternSingleton

./: CMakeLists.txt  README.md
PatternSingleton/: CMakeLists.txt  PatternSingleton.cpp  Singleton.cpp  Singleton.h
